More Mangos Four additions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ endif()
     source_group("Kalimdor Scripts" FILES ${sources_kalimdor})
 
 # --- NOT FOR ZERO ---  
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Outlands Scripts
 file(GLOB sources_outlands scripts/outland/*.cpp scripts/outland/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_outlands})
@@ -111,8 +111,8 @@ file(GLOB sources_outlands scripts/outland/*.cpp scripts/outland/*.h)
 endif()
 # --- END IF ---
 
-# --- TWO / Three ---
-if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+# --- TWO / Three / Four ---
+if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Northrend Scripts
 file(GLOB sources_northrend scripts/northrend/*.cpp scripts/northrend/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_northrend})
@@ -186,13 +186,13 @@ file(GLOB sources_instance_ek_files scripts/eastern_kingdoms/stratholme/*.cpp sc
     source_group("Eastern Kingdoms Scripts\\Instances\\Stratholme" FILES ${sources_instance_ek_files})
 endif()
 
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 file(GLOB sources_instance_ek_strat scripts/eastern_kingdoms/stratholme/*.cpp scripts/eastern_kingdoms/stratholme/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_ek_strat})
   source_group("Eastern Kingdoms Scripts\\Instances\\Stratholme" FILES ${sources_instance_ek_strat})
 endif()
 
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Instance: Magisters Terrace Scripts
 file(GLOB sources_instance_ek_mt scripts/eastern_kingdoms/magisters_terrace/*.cpp scripts/eastern_kingdoms/magisters_terrace/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_ek_mt})
@@ -270,7 +270,7 @@ file(GLOB sources_instance_k_wc scripts/kalimdor/wailing_caverns/*.cpp scripts/k
     source_group("Kalimdor Scripts\\Instances\\Wailing Caverns" FILES ${sources_instance_k_wc})
 
 # --- NOT FOR ZERO ---  
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Instance: Caverns of Time - Black Morass
 file(GLOB sources_instance_k_cot_bm scripts/kalimdor/caverns_of_time/dark_portal/*.cpp scripts/kalimdor/caverns_of_time/dark_portal/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_k_cot_bm})
@@ -283,8 +283,8 @@ file(GLOB sources_instance_k_cot_oh scripts/kalimdor/caverns_of_time/old_hillsbr
 endif()
 # --- END IF ---  
 
-# --- TWO /THREE ONLY ---
-if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+# --- TWO / THREE / FOUR ONLY ---
+if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Instance: Caverns of Time - Culling of Stratholme
 file(GLOB sources_instance_k_cot_cos scripts/kalimdor/caverns_of_time/culling_of_stratholme/*.cpp scripts/kalimdor/caverns_of_time/culling_of_stratholme/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_k_cot_cos})
@@ -299,7 +299,7 @@ file(GLOB sources_instance_k_zf scripts/kalimdor/zulfarrak/*.cpp scripts/kalimdo
 
 # --- NOT FOR ZERO ---  
 #Raid: Caverns of Time - Mount Hyjal
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 file(GLOB sources_instance_k_cot_mh scripts/kalimdor/caverns_of_time/hyjal/*.cpp scripts/kalimdor/caverns_of_time/hyjal/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_k_cot_mh})
   source_group("Kalimdor Scripts\\Raids\\Caverns of Time\\Mount Hyjal" FILES ${sources_instance_k_cot_mh})
@@ -322,7 +322,7 @@ file(GLOB sources_raid_k_taq scripts/kalimdor/temple_of_ahnqiraj/*.cpp scripts/k
     source_group("Kalimdor Scripts\\Raids\\Temple of AQ" FILES ${sources_raid_k_taq})
 
 # --- NOT FOR ZERO ---  
-IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+IF(("${MANGOS_EXP}" STREQUAL "TBC") OR ("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Instance: Auchindoun - Auchenai Crypts
 file(GLOB sources_instance_ol_aac scripts/outland/auchindoun/auchenai_crypts/*.cpp scripts/outland/auchindoun/auchenai_crypts/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_ol_aac})
@@ -415,8 +415,8 @@ file(GLOB sources_raid_ol_gl scripts/outland/gruuls_lair/*.cpp scripts/outland/g
 endif()
 # --- END IF ---
 
-# --- TWO ONLY ---
-if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA"))
+# --- TWO / THREE / FOUR ONLY ---
+if (("${MANGOS_EXP}" STREQUAL "WOTLK") OR ("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Instance: Azjol Nerub
 file(GLOB sources_instance_nr_aznj scripts/northrend/azjol-nerub/azjol-nerub/*.cpp scripts/northrend/azjol-nerub/azjol-nerub/*.h)
   LIST(APPEND mangosscript_LIB_SRCS ${sources_instance_nr_aznj})
@@ -532,8 +532,8 @@ file(GLOB sources_raid_nr_uld scripts/northrend/ulduar/ulduar/*.cpp scripts/nort
   LIST(APPEND mangosscript_LIB_SRCS ${sources_raid_nr_uld})
   source_group("Northrend Scripts\\Raids\\Ulduar" FILES ${sources_raid_nr_uld})
 
-# --- THREE ONLY ---
-if ("${MANGOS_EXP}" STREQUAL "CATA")
+# --- THREE / FOUR ONLY ---
+if (("${MANGOS_EXP}" STREQUAL "CATA") OR ("${MANGOS_EXP}" STREQUAL "MISTS"))
 #Maelstrom Scripts
 file(GLOB sources_maelstrom scripts/maelstrom/*.cpp scripts/maelstrom/*.h)
     LIST(APPEND mangosscript_LIB_SRCS ${sources_maelstrom})
